rtspsrc latency regression 1.22.1 -> 1.22.2
I'm using this pipeline to show IP camera video inside Qt 5.15 application interface:
rtspsrc location=rtsp://... protocols=tcp latency=100 buffer-mode=slave ! queue max-size-buffers=0 ! rtph264depay ! h264parse ! vah264dec compliance=3 ! glupload ! glcolorconvert ! qmlglsink
I have utility for measuring real video latency, where I film timer-printed milliseconds running down to 0 (alternating text position so it's not blurred with itself), and take screenshot of both video output and timer value when it reaches 0, and so in 1.22.1 I measure about ~220ms:
Meanwhile on 1.22.2 (same with latest 1.22.4) I get around 400ms latency:
GStreamer is built on Debian 11 bullseye amd64, using default gcc (Debian 10.2.1-6) 10.2.1 20210110
.
P.S. Offtopic: instead of reimplementig wheel, maybe there are "official" way for measuring real video latency?